--- a/webpage.html
+++ b/webpage.html
@@ -10,7 +10,7 @@
 	}
 	
 	body{
-		background-image: url(03.jpg);
+		background-image: url(https://github.com/Ariella1315/Ariella1315.github.io/blob/main/back.jpg);
 		background-repeat: no-repeat;
 		background-attachment: fixed;
 		background-position: center;
