--- a/webpage.html
+++ b/webpage.html
@@ -1,93 +1,19 @@
 <html>
-<head>
-	<meta charset="utf-8">
-	<title>HomePage</title>
-	<link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
-<style>
-	html{
-		height: 100%;
-	}
-	
-	body{
-		background-image: url(https://github.com/Ariella1315/Ariella1315.github.io/blob/main/back.jpg);
-		background-repeat: no-repeat;
-		background-attachment: fixed;
-		background-position: center;
-		bachground-size: cover;
-	}
-	
-</style>
-<body>
-	<header style="text-align:center">
+	<head>
+		<meta charset="utf-8">
+		<title>HomePage</title>
+		<link rel="icon" type="image/x-icon" href="favicon.ico">
+	</head>
+	<style>
+		body{
+			background-color:"black";
+		}
+	</style>
+	<body>
+		<header style="text-align:center">
 		<h1><span style="color:#D9B300">我的首頁</span></h1>
 		<h2><span style="color:#D9B300">施又睿111652014</span><h2>
 		<h4><span style="color:#D9B300">(A walk on the journey, encounter a boundless dream of stars)</span><h4>
 	</header>
-	<main>
-		<div >
-			
-			<img src="05.jpg" width="304" height="400" border=0/>
-			<figcaption /><span style="color:#D9B300">現實中懶散的我</span></figcaption>			
-			
-			<img src="01.jpg" width="304" height="400" border=0 />
-			<figcaption ><span style="color:#D9B300">遊戲中可愛的我</span></figcaption>
-			</div>
-		</div>
-		<div style="text-align:center">
-			<h1><span style="color:#D9B300">個人簡介</span></h1>
-			<p>
-				<span style="color:#FFFF6F">學校:</span><span style="color:#FFDC35">陽明交通大學</span><br>
-				<span style="color:#FFFF6F">系所:</span><span style="color:#FFDC35">應數系</span><br>
-				<span style="color:#FFFF6F">生日:</span><span style="color:#FFDC35">92/10/15</span><br>
-				<span style="color:#FFFF6F">星座:</span><span style="color:#FFDC35">天枰座</span><br>
-				<span style="color:#FFFF6F">MBTI:</span><span style="color:#FFDC35">INTJ</span><br>
-				<span style="color:#FFFF6F">興趣:</span><span style="color:#FFDC35">西洋棋</span>	<br>	
-			</p>
-		</div>
-		<div style="text-align:center">
-			<h1><span style="color:#C6A300">介紹我的興趣:西洋棋</span></h1>
-			<table bgcolor="000040" border="groove">
-				<tr>
-					<th><span style="color:#D9B300">pawn</span></th>
-					<th><span style="color:#D9B300">knight</span></th>
-					<th><span style="color:#D9B300">bishop</span></th>
-					<th><span style="color:#D9B300">rook</span></th>
-					<th><span style="color:#D9B300">queen</span></th>
-					<th><span style="color:#D9B300">king</span></th>
-				</tr>
-				<tr>
-					<td><span style="color:#D9B300">走法:向前一步，第一步可以走兩格<br>吃法:只可吃斜前方的棋子</span></td>
-					<td><span style="color:#D9B300">走法:L型，吃法與走法相同</span></td>
-					<td><span style="color:#D9B300">走法:斜著走，不限格數，吃法與走法相同</span></td>
-					<td><span style="color:#D9B300">走法:橫豎走步，不限格數，吃法與走法相同</span></td>
-					<td><span style="color:#D9B300">斜、橫、豎皆可，且不限格數，吃法與走法相同</span></td>
-					<td><span style="color:#D9B300">斜、橫、豎皆可，但只可走一步，當對方王被將軍且無法動彈，則獲勝</span></td>
-				</tr>
-			</table>
-			<p><span style="color:#FFDC35">
-				目前在chess上與不同人對戰，平常比較喜歡和機器人下棋，或是玩tactic。喜歡和機器人下棋是因為更有挑戰性。
-			</span></p>
-			<p><span style="color:#FFDC35">
-				問我何時最快樂?<br>
-				當我將軍對方國王的那一剎那最快樂!(Lˋwˊ)				
-			</span></p>
-		</div>
-		<div style="text-align:center">
-			<p><span style="color:#FFDC35">
-				附上我與一位積分1200的機器人Ruby對戰的過程
-			</span></p>
-			<center><a href="https://youtu.be/sI0XzDKffIc?feature=shared" ><span style="color:#FFFFFF">Windsky7 vs. Ruby(click me)</span></a></center>
-		</div>
-		<div style="text-align:center">
-			<p>
-				<span style="color:#C6A300">Can you solve it? White to play.</span>
-			</p>
-			<img src="09.jpg" width="400" height="400" border=0/>
-		</div>
-	</main>
-	<footer>
-		<p><span style="color:#FFFFFF">&copy; 2024 版權所有 引用請聯繫 ariel50161@gmail.com</span></p>
-	</footer>
-</body>
+	</body>
 </html>
