--- a/webpage.html
+++ b/webpage.html
@@ -4,16 +4,19 @@
 		<title>HomePage</title>
 		<link rel="icon" type="image/x-icon" href="favicon.ico">
 	</head>
-	<style>
-		body{
-			color:"black";
-		}
-	</style>
+	
 	<body>
 		<header style="text-align:center">
-		<h1><span style="color:#D9B300">我的首頁</span></h1>
-		<h2><span style="color:#D9B300">施又睿111652014</span><h2>
-		<h4><span style="color:#D9B300">(A walk on the journey, encounter a boundless dream of stars)</span><h4>
-	</header>
+			<h1><span style="color:#D9B300">我的首頁</span></h1>
+			<h2><span style="color:#D9B300">施又睿111652014</span><h2>
+			<h4><span style="color:#D9B300">(A walk on the journey, encounter a boundless dream of stars)</span><h4>
+		</header>
+		<main style="text-align:center">
+			<div>
+				<p>
+					looking
+				</p>
+			</div>
+		</main>
 	</body>
 </html>
