--- a/webpage.html
+++ b/webpage.html
@@ -14,7 +14,12 @@
 		<main style="text-align:center">
 			<div>
 				<p>
-					looking
+					<span style="color:#FFFF6F">學校:</span><span style="color:#FFDC35">陽明交通大學</span><br>
+					<span style="color:#FFFF6F">系所:</span><span style="color:#FFDC35">應數系</span><br>
+					<span style="color:#FFFF6F">生日:</span><span style="color:#FFDC35">92/10/15</span><br>
+					<span style="color:#FFFF6F">星座:</span><span style="color:#FFDC35">天枰座</span><br>
+					<span style="color:#FFFF6F">MBTI:</span><span style="color:#FFDC35">INTJ</span><br>
+					<span style="color:#FFFF6F">興趣:</span><span style="color:#FFDC35">西洋棋</span><br>
 				</p>
 			</div>
 		</main>
