--- a/webpage.html
+++ b/webpage.html
@@ -22,6 +22,18 @@
 					<span style="color:#FFFF6F">興趣:</span><span style="color:#FFDC35">西洋棋</span><br>
 				</p>
 			</div>
+			<div style="text-align:center">
+				<p><span style="color:#FFDC35">
+					附上我與一位積分1200的機器人Ruby對戰的過程
+				</span></p>
+				<center><a href="https://youtu.be/sI0XzDKffIc?feature=shared" ><span style="color:#FFFFFF">Windsky7 vs. Ruby(click me)</span></a></center>
+			</div>
+			<div style="text-align:center">
+				<p>
+					<span style="color:#C6A300">Can you solve it? White to play.</span>
+				</p>
+				<img src="https://github.com/Ariella1315/Ariella1315.github.io/blob/main/board.jpg" width="400" height="400" border=0/>
+			</div>
 		</main>
 	</body>
 </html>
