--- a/webpage.html
+++ b/webpage.html
@@ -32,7 +32,7 @@
 				<p>
 					<span style="color:#C6A300">Can you solve it? White to play.</span>
 				</p>
-				<img src="https://github.com/Ariella1315/Ariella1315.github.io/blob/main/board.jpg" width="400" height="400" border=0/>
+				<img src="https://github.com/Ariella1315/Ariella1315.github.io/blob/main/board.jpg?raw=true" width="400" height="400" border=0/>
 			</div>
 		</main>
 	</body>
