--- a/webpage.html
+++ b/webpage.html
@@ -35,5 +35,8 @@
 				<img src="https://github.com/Ariella1315/Ariella1315.github.io/blob/main/board.jpg?raw=true" width="400" height="400" border=0/>
 			</div>
 		</main>
+		<footer>
+			<p><span style="color:#FFFFFF">&copy; 2024 版權所有 引用請聯繫 ariel50161@gmail.com</span></p>
+		</footer>
 	</body>
 </html>
