--- a/webpage.html
+++ b/webpage.html
@@ -11,7 +11,7 @@
 			<h2><span style="color:#D9B300">施又睿111652014</span><h2>
 			<h4><span style="color:#D9B300">(A walk on the journey, encounter a boundless dream of stars)</span><h4>
 		</header>
-		<main style="text-align:center color:black" >
+		<main style="text-align:center" >
 			<div>
 				<p>
 					<span style="color:#FFFF6F">學校:</span><span style="color:#FFDC35">陽明交通大學</span><br>
