--- a/webpage.html
+++ b/webpage.html
@@ -2,7 +2,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>HomePage</title>
-		<link rel="icon" type="image/x-icon" href="favicon.ico">
+		<link rel="icon" type="image/x-icon" href="webpage.css">
 	</head>
 	
 	<body>
