--- a/webpage.html
+++ b/webpage.html
@@ -24,9 +24,9 @@
 			</div>
 			<div style="text-align:center">
 				<p><span style="color:#FFDC35">
-					附上我與一位積分1200的機器人Ruby對戰的過程
+					附上我與一位機器人對戰的過程
 				</span></p>
-				<center><a href="https://youtu.be/sI0XzDKffIc?feature=shared" ><span style="color:#FFFFFF">Windsky7 vs. Ruby(click me)</span></a></center>
+				<center><a href="https://youtube.com/shorts/-oCYyGnoXFw?feature=share" ><span style="color:#FFFFFF">Windsky7 vs. Ruby(click me)</span></a></center>
 			</div>
 			<div style="text-align:center">
 				<p>
