--- a/myVocabulary/words.html
+++ b/myVocabulary/words.html
@@ -2,15 +2,15 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Vocabulary</title>
-		<link rel="stylesheet" type="text/css" href="https://github.com/Ariella1315/Ariella1315.github.io/blob/main/myVocabulary/vc.css" />
+		<link rel="stylesheet" type="text/css" href="vc.css" />
 	</head>
 	<body>
 		<header>
 			Vocabulary
 		</header>
 		<main id="context">
-			<script type="text/javascript" src="https://github.com/Ariella1315/Ariella1315.github.io/blob/main/myVocabulary/vc.js"></script>
-			<script type="text/javascript" src="https://github.com/Ariella1315/Ariella1315.github.io/blob/main/myVocabulary/vocabulary.js"></script>			
+			<script type="text/javascript" src="vc.js"></script>
+			<script type="text/javascript" src="vocabulary.js"></script>			
 		</main>
 	</body>
 </html>
