--- a/theWebpage.html
+++ b/theWebpage.html
@@ -6,9 +6,8 @@
   </head>
   <body>
     <header style="text-align:center">
-      <h1><span style="color:#D9B300">我的首頁</span></h1>
-			<h2><span style="color:#D9B300">施又睿111652014</span><h2>
-			<h4><span style="color:#D9B300">(A walk on the journey, encounter a boundless dream of stars)</span><h4></header>
+	    
+    </header>
     <main style="text-align:center"></main>
     <footer></footer>
   </body>
