--- a/theWebpage.html
+++ b/theWebpage.html
@@ -1,2 +1,7 @@
 <html>
+  <head>
+		<meta charset="utf-8">
+		<title>HomePage</title>
+		<link rel="stylesheet" type="text/css" href="webpage.css" />
+	</head>
 </html>
